<resources>
    <string name="app_name">GithubAPI</string>
    <string name="user_name">Username</string>
    <string name="name">Name</string>
    <string name="following">Following</string>
    <string name="followers">Followers</string>
    <string name="search">Search</string>
    <string name="detail">User Detail</string>
    <string name="tab_1">Followers</string>
    <string name="tab_2">Following</string>
    <string name="favorite">Favorite User</string>
</resources>